# aoc2022

./: .gitignore  Cargo.toml
src/: lib.rs
