[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
syn = {version = "*", features = ["parsing", "full"]}
quote = {version = "*"}
itertools = "0.10.5"
num-bigint = "0.4.3"
num-traits = "0.2.15"
lazy_static = "1.4.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
regex = "1.7.0"
